Add new Test Cases

--- a/EarchiveFrameworkTest/bin/config.properties
+++ b/EarchiveFrameworkTest/bin/config.properties
@@ -2,29 +2,42 @@
 ADMIN_BASE_URL: https://testsnm.quadrem.net/snm/login.aspx
 SEARCH_BASE_URL: https://testsnm.quadrem.net/EA/Invoice/Workbench.aspx
 
+#COMMON
+XPATH_IMG_GENERAL: //*[@id="ctl00_Image5"]
+
 #Login XPATH
 XPATH_BUTTON_LOGIN: //*[@id="btnLogin"]
 XPATH_BUTTON_LOGOFF: //*[@id="ctl00_btLogout"]
 XPATH_ROLE: //html/body/form/div[4]/div/div[2]/ul/li/a
+XPATH_ROLE_EUR: //html/body/form/div[3]/div/div[2]/ul/li/a
 
 # Credentials for UAT - User Europe
 cUsername: caliaga_GlobalAdmin
 cPassword: 123456
 cOrgID: EURHS2
 cValidationTest1: EURHS2(Quadrem Eur
+cStartDate:14/10/2013
+cEndDate:21/10/2013
+cSupplierName: Quadrem Europe - Hosted Seller
+cUserAdmin: 0K0MR9
+cPassAdmin: ariba.2013
+cValidationTest3: QAINV.HU161013.BC
+
 
 # Credentials for UAT - User Brazil
 cUsernameBR: Q45501_Admin
-cPasswordBR: AKsAlD523
 cOrgIDBR: Q45501
+cPasswordBR: AKsAlD523
 cValidationTest2: Q45501(QA NEW CBPS
+cStartDateBr:10/10/2013
+cEndDateBr:11/10/2013
 
 #WorkBench XPATH
 cIDTableDataWorkBench: ctl00_DefaultContent_rgvWBData_ctl00
 XPATH_BUTTON_SEARCH: //*[@id="ctl00_DefaultContent_btnSearch"]
 
 #Value Expected for Searh by VatNumber
-cVatNumberSearch: 130913108
+cVatNumberSearch: 310913106JB1
 cVatNumberSearch2: 130913109
 
 cTest://*[@id="txtUserID"]
